Updated theme again

--- a/theme/recipe.hbs
+++ b/theme/recipe.hbs
@@ -8,7 +8,7 @@
     <title>{{config.title}}</title>
     <meta name="description" content="{{config.description}}">
     <meta name="author" content="{{config.author}}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.min.css">
 </head>
 
 <body>
