--- a/theme/recipe.hbs
+++ b/theme/recipe.hbs
@@ -58,7 +58,7 @@
 
         </div>
         <center>
-            <img src="http://placekitten.com/320/320"></img>
+            <img src="../imgs/cabrito.jpg"></img>
         </center>
     </article>
 
